hphp/test/zend/good/tests/classes/abstract_inherit.php.expectf

Fatal error: Cannot instantiate abstract class fail in %s/abstract_inherit.php on line 10
